unpackaged/main/default/objects/Prompt_Information__c/Prompt_Information__c.object-meta.xml
<CustomObject>
    <label>Prompt Information</label>
    <nameField>
        <label>Prompt Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prompt Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>