unpackaged/main/default/objects/Prompt_Information__c/fields/Alias__c.field-meta.xml
<CustomField>
    <fullName>Alias__c</fullName>
    <description>Prompt Name Alias</description>
    <label>Alias</label>
    <length>80</length>
    <type>Text</type>
</CustomField>