unpackaged/main/default/objects/Prompt_Information__c/fields/Base_Asset_Template__c.field-meta.xml
<CustomField>
    <fullName>Base_Asset_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Base Asset Template</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.TEM_Version__c</field>
            <operation>equals</operation>
            <valueField>Base_Asset_Template__c.TEM_Version__r.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Base_Asset_Template__c</referenceTo>
    <relationshipLabel>Prompt Information</relationshipLabel>
    <relationshipName>Prompt_Information</relationshipName>
    <type>Lookup</type>
</CustomField>