unpackaged/main/default/objects/Prompt_Information__c/fields/Compiled_Excel_Sorting_Order__c.field-meta.xml
<CustomField>
    <fullName>Compiled_Excel_Sorting_Order__c</fullName>
    <label>Compiled Excel Sorting Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>