unpackaged/main/default/objects/Prompt_Information__c/fields/Confirm_Message_On_Delete__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Message_On_Delete__c</fullName>
    <label>Confirm Message On Delete</label>
    <type>TextArea</type>
</CustomField>