unpackaged/main/default/objects/Prompt_Information__c/fields/Confirm_Message_On_Next__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Message_On_Next__c</fullName>
    <label>Confirm Message On Next</label>
    <type>TextArea</type>
</CustomField>