unpackaged/main/default/objects/Prompt_Information__c/fields/CSV_Sorting_Order__c.field-meta.xml
<CustomField>
    <fullName>CSV_Sorting_Order__c</fullName>
    <label>CSV Sorting Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>