unpackaged/main/default/objects/Prompt_Information__c/fields/Dev_Prompt_Information_Id__c.field-meta.xml
<CustomField>
    <fullName>Dev_Prompt_Information_Id__c</fullName>
    <label>Dev Prompt Information Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>