unpackaged/main/default/objects/Prompt_Information__c/fields/Is_Plant_Information_Prompt__c.field-meta.xml
<CustomField>
    <fullName>Is_Plant_Information_Prompt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To indicate prompt need to show in core attribute object for rollup</description>
    <label>Is Plant Information Prompt</label>
    <type>Checkbox</type>
</CustomField>