unpackaged/main/default/objects/Prompt_Information__c/fields/Prompt_Id__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Id__c</fullName>
    <label>Prompt Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>