unpackaged/main/default/objects/Prompt_Information__c/fields/Prompt_Type__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Type__c</fullName>
    <label>Prompt Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Build Prompt</fullName>
            </value>
            <value>
                <fullName>Detail Prompt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>