unpackaged/main/default/objects/Prompt_Information__c/fields/Show_Popup_On_Next_Button__c.field-meta.xml
<CustomField>
    <fullName>Show_Popup_On_Next_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Popup On Next Button</label>
    <type>Checkbox</type>
</CustomField>