unpackaged/main/default/objects/Prompt_Information__c/fields/TEM_Version__c.field-meta.xml
<CustomField>
    <fullName>TEM_Version__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>TEM Version</label>
    <referenceTo>TEM_Version__c</referenceTo>
    <relationshipLabel>Prompt Information</relationshipLabel>
    <relationshipName>Prompt_Information</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>