unpackaged/main/default/objects/Prompt_Information__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solar - PV</fullName>
            </value>
            <value>
                <fullName>Wind - Onshore</fullName>
            </value>
            <value>
                <fullName>Wind - Offshore</fullName>
            </value>
            <value>
                <fullName>MetMast</fullName>
            </value>
            <value>
                <fullName>SubstationSwitchgear</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>