unpackaged/main/default/objects/Prompt_Information__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Base_Asset_Template__c</columns>
    <columns>Confirm_Message_On_Next__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>